# vol-applet

./: .dockerignore  Cargo.toml  Dockerfile  PKGBUILD  README.md
src/: elements.rs  exception.rs  lib.rs  main.rs  options.rs  popout.rs  tray_icon.rs
src/audio/: mod.rs  pipewire.rs  pulseaudio.rs  shared_output_list.rs
tests/: integration_test.rs
