[package]
name = "volapplet"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.16.0"
gtk-sys = "0.16.0"
gdk-sys = "0.16.0"
gobject-sys = "0.17.0"
libpulse-sys = "1.20.1"
once_cell = "1.17.1"
owo-colors = "3.5.0"
# serde = "1.0.152"